# opengl_sandbox

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
inc/: a.h  constants.h  gl_error_manager.h  index_buffer.h  renderer.h  shader.h  texture.h  vertex_array.h  vertex_buffer.h  vertex_buffer_layout.h
inc/test/: test.h  test_batch_colors.h  test_batch_rendering.h  test_batch_textures.h  test_clear_color.h  test_color_uniform.h  test_dynamic_buffer.h  test_texture_2d.h
res/shaders/: basic.shader  test_batch_rendering.shader  test_batch_textures.shader
src/: CMakeLists.txt  a.cpp  constants.cpp.cmake.in  gl_error_manager.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
src/test/: test.cpp  test_batch_colors.cpp  test_batch_rendering.cpp  test_batch_textures.cpp  test_clear_color.cpp  test_color_uniform.cpp  test_dynamic_buffer.cpp  test_texture_2d.cpp
